# rack-tracker

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  index.html
.githooks/: pre-commit
poseLandmarker_Python/: .env.example  README.md  app.py  main.py  pyproject.toml  read_docs.py
poseLandmarker_Python/adapter/: __init__.py  mediapipe_adapter.py  opencv_adapter.py
poseLandmarker_Python/config/: __init__.py  config.py
poseLandmarker_Python/controller/: __init__.py  analysis.py  health.py  jobs.py  results.py
poseLandmarker_Python/docs/: README.md  architecture.md  testing.md
poseLandmarker_Python/docs/architecture/: analysis-pipeline-design.md  architecture.md  data-analysis-pipeline-guide.md  frontend-api-integration-guide.md  llm-feedback-integration.md
poseLandmarker_Python/docs/examples/: mediapipe-pose-landmarker.ipynb
poseLandmarker_Python/docs/optimization/: README.md  performance-summary.md
poseLandmarker_Python/schema/: __init__.py  benchmark.py  frame.py  job.py  pose.py  result.py
poseLandmarker_Python/service/: __init__.py  analysis_body_profile.py  analysis_cop.py  analysis_events.py  analysis_features.py  analysis_issues.py  analysis_kpis.py  analysis_pipeline.py  analysis_preprocess.py  analysis_reps.py  analysis_thresholds.py  analysis_visualization.py  benchmarking.py  job_manager.py  llm_feedback.py  llm_prompt_payload.py  pose_inference.py  skeleton_mapper.py  video_reader.py
poseLandmarker_Python/tests/: test_analysis_pipeline.py  test_llm_prompt_payload.py
poseLandmarker_Python/tmp/: check_gpu_delegate.py
(+133 files in other folders)
